# epochalypse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: lint.yml  release.yml
docs/: conf.py  index.md
notebooks/: DEBUG-plot-scan-tracks.ipynb  DEBUG-scan-law-madness.ipynb  check-scan-law.ipynb
scripts/: make_gost_files.py  process_gaia_scanning_law.py  process_gaia_scanning_law_healpix_index.py  process_gaia_scanning_law_new.py
src/epochalypse/: __init__.py  custom_types.py  data.py
src/epochalypse/kepler/: __init__.py  body.py  helpers.py  nbody_system.py  orientation.py
src/epochalypse/simulate/: __init__.py  astrometry.py  scanlaw.py  source.py
tests/system/: test_import.py
tests/unit/: test_example.py  test_orientation.py
